--- a/videos/static/style.css
+++ b/videos/static/style.css
@@ -1356,9 +1356,11 @@ padding-top: 5px;
 .liste_videos{
   display: table;
   margin: 0 auto;
+  vertical-align: top;
 }
 
 .bloc_video{
+  vertical-align: top;
   width: 200px;
   padding-left: 5px;
   padding-right: 5px;
@@ -1758,7 +1760,7 @@ transition: all 0.1s linear;
 
 .fil_barre{
   width: 2px;
-  height: 100px;
+  height: 107px;
   background-color: #c8c8c8;
   margin: auto;
   vertical-align: top;
