--- a/videos/static/style.css
+++ b/videos/static/style.css
@@ -728,8 +728,12 @@ Tout ce qui suit jusqu'au prochain bloc concerne le design du lecteur de vidéos
 
   float: right;
   display: table;
-  background-color: #DDDDDD;
+
+
   border-radius: 6px;
+
+
+
   padding-top: -20px;
 }
 
@@ -803,8 +807,19 @@ Tout ce qui suit jusqu'au prochain bloc concerne le design du lecteur de vidéos
   margin-bottom: 5px;
 
   font-size: 12px;
-  background-color: #DDDDDD;
-  border-radius: 6px;
+  background-color: rgb(250,250,250);
+
+  border-top-left-radius: 6px;
+  border-bottom-left-radius: 6px;
+
+  color: #737373;
+
+  border-style: solid;
+  border-color: #CCCCCC;
+  border-width: 1px;
+  border-right: none;
+
+
 }
 
 .titre_et_vues_vues_et_jaime_bouton_jaime_vert{
@@ -818,7 +833,8 @@ Tout ce qui suit jusqu'au prochain bloc concerne le design du lecteur de vidéos
   text-align: center;
   box-shadow: 0px 0px 2px -1px;
   font-size: 12px;
-  border-radius: 6px;
+  border-top-right-radius:  6px;
+  border-bottom-right-radius:  6px;
 
   border-style: solid;
   border-width: 1px;
@@ -829,7 +845,6 @@ Tout ce qui suit jusqu'au prochain bloc concerne le design du lecteur de vidéos
 .lien_jaime_vert :hover{
   text-decoration: none;
   background-color: white;
-  border-radius: 6px;
   color : #50b649;
 }
 
@@ -844,18 +859,21 @@ Tout ce qui suit jusqu'au prochain bloc concerne le design du lecteur de vidéos
   text-align: center;
   box-shadow: 0px 0px 2px -1px;
   font-size: 12px;
-  border-radius: 6px;
+  border-top-right-radius:  6px;
+  border-bottom-right-radius:  6px;
 
   border-style: solid;
   border-width: 1px;
   border-color: red;
   background-color: red;
+
+
 }
 
 .lien_jaime_rouge :hover{
   text-decoration:none;
   background-color: white;
-  border-radius: 6px;
+
   color : red;
 }
 
@@ -1755,7 +1773,6 @@ left:0px;
 -moz-transition: all 0.1s linear;
 transition: all 0.1s linear;
 }
-
 
 
 .fil_barre{
