--- a/videos/static/style.css
+++ b/videos/static/style.css
@@ -1061,44 +1061,54 @@ margin-bottom: 10px;
 .commentaires_jaime{
 margin-left: 5px;
 display: table;
-background-color: #DDDDDD;
-border-radius: 6px;
-
 }
 
 .petit_titre_et_vues_vues_et_jaime_nb_jaime{
 
-  display: table-cell;
 
-  padding-right: 5px;
-  padding-left: 5px;
-  padding-top: 4px;
-  padding-bottom: 4px;
+
+  padding-right: 3px;
+  padding-left: 3px;
+  padding-top: 1px;
+  padding-bottom: 1px;
   text-align: right;
   /*box-shadow: 0px 0px 2px -1px;*/
-  margin-bottom: 5px;
+  display: inline-block;
 
-  font-size: 12px;
-  background-color: #DDDDDD;
-  border-radius: 6px;
+  font-size: 10px;
+  background-color: rgb(250,250,250);
+
+  border-top-left-radius: 6px;
+  border-bottom-left-radius: 6px;
+
+  color: #737373;
+
+  border-style: solid;
+  border-color: #CCCCCC;
+  border-width: 1px;
+
+
 }
 
 .commentaires_jaime:hover  .petit_titre_et_vues_vues_et_jaime_vues_jaime{
-  display: table-cell;
+display: inline-block;
 }
-
+.petit_titre_et_vues_vues_et_jaime_vues_jaime a{
+  text-decoration: none;
+}
 .petit_titre_et_vues_vues_et_jaime_bouton_jaime_vert{
-  display: table-cell;
+
 
   color:white;
   text-decoration: none;
   padding: 2px;
-  padding-top: 3px;
-  padding-bottom: 3px;
+  padding-top: 1px;
+  padding-bottom: 1px;
   text-align: center;
   box-shadow: 0px 0px 2px -1px;
-  font-size: 12px;
-  border-radius: 6px;
+  font-size: 10px;
+  border-top-right-radius:  6px;
+  border-bottom-right-radius:  6px;
 
   border-style: solid;
   border-width: 1px;
@@ -1109,43 +1119,44 @@ border-radius: 6px;
 .petit_lien_jaime_vert :hover{
   text-decoration: none;
   background-color: white;
-  border-radius: 6px;
   color : #50b649;
 }
 
 .petit_titre_et_vues_vues_et_jaime_vues_jaime{
-  display: none;
+display: none;
 }
 .petit_titre_et_vues_vues_et_jaime_bouton_jaime_rouge{
-  display: table-cell;
+
 
   color:white;
   text-decoration: none;
   padding: 2px;
-  padding-top: 3px;
-  padding-bottom: 3px;
+  padding-top: 1px;
+  padding-bottom: 1px;
   text-align: center;
   box-shadow: 0px 0px 2px -1px;
-  font-size: 12px;
-  border-radius: 6px;
+  font-size: 10px;
+  border-top-right-radius:  6px;
+  border-bottom-right-radius:  6px;
 
   border-style: solid;
   border-width: 1px;
   border-color: red;
   background-color: red;
+
+  margin-left: -5px;
 }
 
 .petit_lien_jaime_rouge :hover{
   text-decoration:none;
   background-color: white;
-  border-radius: 6px;
   color : red;
 }
 
 .cellule_com_jaime{
   display: table-cell;
   text-align: right;
-  padding-top: -10px;
+
 
 }
 /*
