légères modifs de couleurs de boutons

--- a/videos/static/style.css
+++ b/videos/static/style.css
@@ -738,7 +738,7 @@ Tout ce qui suit jusqu'au prochain bloc concerne le design du lecteur de vidéos
 }
 
 .bouton_deja_epingler{
-  opacity: 0.7;
+  opacity: 0.55;
   padding-top: 1px;
   width: 21px;
   float: right;
@@ -746,7 +746,7 @@ Tout ce qui suit jusqu'au prochain bloc concerne le design du lecteur de vidéos
 }
 
 .bouton_epingler{
-  opacity: 0.5;
+  opacity: 0.25;
   padding-top: 1px;
   width: 21px;
   float: right;
@@ -759,13 +759,13 @@ Tout ce qui suit jusqu'au prochain bloc concerne le design du lecteur de vidéos
 }
 
 .bouton_epingler:hover{
-  opacity: 0.9;
+  opacity: 0.55;
   cursor: pointer;
 }
 
 
 .bouton_deja_epingler:hover{
-  opacity: 0.3;
+  opacity: 0.25;
   cursor: pointer;
 }
 
@@ -779,6 +779,7 @@ Tout ce qui suit jusqu'au prochain bloc concerne le design du lecteur de vidéos
   float: right;
   vertical-align: middle;
   opacity: 0;
+  color: rgb(115,115,115);
 
   -webkit-transition: all 0.2s cubic-bezier(0.770, 0.000, 0.175, 1.000);
   -moz-transition: all 0.2s cubic-bezier(0.770, 0.000, 0.175, 1.000);
@@ -953,7 +954,7 @@ Tout ce qui suit jusqu'au prochain bloc concerne le design du lecteur de vidéos
 
 
 .commentaires_video_titre{
-  color: #666666;
+  color: black;
   font-size: 15px;
 
 }
@@ -999,7 +1000,7 @@ Tout ce qui suit jusqu'au prochain bloc concerne le design du lecteur de vidéos
 
 
 .commentaires_supprimer:hover{
-  background-color: #DCDCDC;
+  background-color: rgb(240,240,240);
 }
 
 .commentaires_video_faire{
