--- a/videos/templates/video.html
+++ b/videos/templates/video.html
@@ -177,8 +177,8 @@
 
                 {% else %}
 
-                    <a href="{% url 'like_comment' r.id  %}" class="lien_jaime_vert">
-                      <div class="titre_et_vues_vues_et_jaime_bouton_jaime_vert">
+                    <a href="{% url 'like_comment' r.id  %}" class="petit_lien_jaime_vert">
+                      <div class="petit_titre_et_vues_vues_et_jaime_bouton_jaime_vert">
                         J'aime
                       </div>
                     </a>
