--- a/videos/templates/fil_temporel.html
+++ b/videos/templates/fil_temporel.html
@@ -73,6 +73,36 @@
 
 
 </div>
+
+<div class="svg_container_haut">
+  <svg width="50" height="50" class="svg_rupture">
+    <line stroke-linecap="undefined" stroke-linejoin="undefined" id="svg_4" y2="0" x2="25.19231" y1="25.67307" x1="25.19231" fill-opacity="null" stroke-opacity="null" stroke="#C8C8C8" fill="none"/>
+
+    <line stroke="#FDC500" stroke-linecap="undefined" stroke-linejoin="undefined" id="svg_1" y2="20.09615" x2="39.03839" y1="30.09615" x1="29.03839" fill="none"/>
+  <line stroke-linecap="undefined" stroke-linejoin="undefined" id="svg_2" y2="30" x2="29.61539" y1="19.95194" x1="19.27887" fill-opacity="null" stroke-opacity="null" stroke="#FDC500" fill="none"/>
+  <line stroke="#FDC500" stroke-linecap="undefined" stroke-linejoin="undefined" id="svg_3" y2="20" x2="19.90385" y1="30" x1="9.90385" fill="none"/>
+  </svg>
+</div>
+
+<div class="container_text_rupture">
+  <div class="text_rupture">
+    <span class="new_jtx">JTX 2015</span><br>
+    <span class="old_jtx">JTX 2014</span>
+  </div>
+</div>
+
+
+
+<div class="svg_container_bas">
+  <svg width="50" height="50" class="svg_rupture">
+    <line stroke-linecap="undefined" stroke-linejoin="undefined" id="svg_4" y2="50" x2="25.19231" y1="25.67307" x1="25.19231" fill-opacity="null" stroke-opacity="null" stroke="#C8C8C8" fill="none"/>
+    <line stroke="#CC181E" stroke-linecap="undefined" stroke-linejoin="undefined" id="svg_1" y2="20.09615" x2="39.03839" y1="30.09615" x1="29.03839" fill="none"/>
+  <line stroke-linecap="undefined" stroke-linejoin="undefined" id="svg_2" y2="30" x2="29.61539" y1="19.95194" x1="19.27887" fill-opacity="null" stroke-opacity="null" stroke="#CC181E" fill="none"/>
+  <line stroke="#CC181E" stroke-linecap="undefined" stroke-linejoin="undefined" id="svg_3" y2="20" x2="19.90385" y1="30" x1="9.90385" fill="none"/>
+  </svg>
+</div>
+
+
 {% endfor %}
 </div>
 </div>
