Fil avec rupture, plus 50000 ruptures

--- a/videos/templates/fil_temporel.html
+++ b/videos/templates/fil_temporel.html
@@ -74,6 +74,7 @@
 
 </div>
 
+{% if p.id == 81 %}
 <div class="svg_container_haut">
   <svg width="50" height="50" class="svg_rupture">
     <line stroke-linecap="undefined" stroke-linejoin="undefined" id="svg_4" y2="0" x2="25.19231" y1="25.67307" x1="25.19231" fill-opacity="null" stroke-opacity="null" stroke="#C8C8C8" fill="none"/>
@@ -101,7 +102,7 @@
   <line stroke="#CC181E" stroke-linecap="undefined" stroke-linejoin="undefined" id="svg_3" y2="20" x2="19.90385" y1="30" x1="9.90385" fill="none"/>
   </svg>
 </div>
-
+{% endif%}
 
 {% endfor %}
 </div>
