--- a/videos/templates/proj.html
+++ b/videos/templates/proj.html
@@ -37,7 +37,17 @@
 	    </div>
 
 	    <div id="proj_auteurs" class="titre_et_vues_auteurs">JTX 20{{ proj | short_promo }}</div>
-	    <div class="titre_et_vues_info">Catégorie : <a href="{% url 'category' proj.category.id 1 %}">{{proj.category.titre}}</a></div>
+	    <div class="titre_et_vues_info">Catégorie :
+				{% if proj.category.titre.lower == 'proj jtx' %}
+					<a href="{% url 'category' proj.category.id 1 %}" class="titre_et_vues_info_cat_proj">{{proj.category.titre}}</a>
+				{% elif proj.category.titre.lower == 'amphi binets' %}
+					<a href="{% url 'category' proj.category.id 1 %}" class="titre_et_vues_info_cat_amphi">{{proj.category.titre}}</a>
+				{% elif proj.category.titre.lower == 'semaine internationale' %}
+					<a href="{% url 'category' proj.category.id 1 %}" class="titre_et_vues_info_cat_semaine">{{proj.category.titre}}</a>
+				{% elif proj.category.titre.lower == "coupe de l'x" %}
+					<a href="{% url 'category' proj.category.id 1 %}" class="titre_et_vues_info_cat_coupe">{{proj.category.titre}}</a>
+				{% endif %}
+			</div>
 
 	    <div class="nb_vues">
 			 {{ proj.views }} vues
