--- a/videos/templates/base.html
+++ b/videos/templates/base.html
@@ -18,6 +18,11 @@
 
 <div id="central">
 
+    <a href="https://docs.google.com/forms/u/0/d/e/1FAIpQLScnWrGA33Z6HbHlhkl-g0sqKDzbGaz16Yd0MVAl8hHbbWc_5g/viewform?usp=sf_link" target="_newtab">
+    <div class="bouton_suggestions">
+      Signaler un bug\Proposer une suggestion
+    </div>
+    </a>
 
 
     <button type="button" class="menu_button" onclick="h_r_lateral_bar()">
