--- a/videos/static/style.css
+++ b/videos/static/style.css
@@ -1950,7 +1950,49 @@ transition: all 0.1s linear;
   font-weight: 800;
 }
 
+.bouton_suggestions{
+  background-color: rgb(250,250,250);
+  position: fixed;
+  right: 5px;
+  height: 20px;
+  border-radius: 5px;
+  border-color: #c8c8c8;
+  border-style: solid;
+  border-width: 1px;
+  padding: 3px;
+  padding-left: 5px;
+  padding-right: 5px;
+  width: 300px;
+  text-align: center;
+  z-index: 2;
+  margin-top: 11px;
+  overflow: hidden;
+
+  -webkit-transition: left 0.2s linear;
+  -moz-transition: left 0.2s linear;
+  transition: left 0.2s linear;
+}
+
+ a .bouton_suggestions{
+  text-decoration: none;
+  color: black;
+}
+
+.bouton_suggestions:hover{
+  background-color: rgb(230,230,230);
+}
+
+@media screen and (max-width: 1184px){
+  .bouton_suggestions{
+    left:850px;
+    width: 70px;
+  }
+}
+
+
 @media screen and (max-width: 1000px)  {
+
+
   .fil_description_date{
     width: 230px;
   }
