Recherche pour rattraper Thibault <3

--- a/videos/templates/base.html
+++ b/videos/templates/base.html
@@ -180,7 +180,9 @@
           <h1>
           Tags affichés :</h1> <span class="tag">{{titre}}</span>
           <hr class="container_hr">
-      {% elif titre %}
+    
+
+      {% elif titre and not titre_search %}
           <div class="container">
           <h1>{{titre}}</h1>
 
