--- a/videos/static/style.css
+++ b/videos/static/style.css
@@ -506,6 +506,11 @@ Style des listes de vidéos et de projs
 }
 
 
+.search_liste_videos a {
+  text-decoration: none;
+}
+
+
 
 /* Concerne l'affichage des images de template des projs que l'on impose à la taille 16/9 */
 .proj_image{
@@ -1349,6 +1354,16 @@ padding-top: 5px;
 
 }
 
+.search_container{
+  background-color: white;
+  box-shadow: 0px 0px 10px -7px;
+  padding-left: 10px;
+  padding-right: 10px;
+  padding-bottom: 10px;
+  margin-top:0px;
+  width: 550px;
+}
+
 .container_hr{
 
     display: table;
@@ -1438,6 +1453,13 @@ padding-top: 5px;
   display: table;
   margin: 0 auto;
   vertical-align: top;
+}
+
+.search_liste_videos{
+  display: table;
+  margin: 0 auto;
+  vertical-align: top;
+  width: 500px;
 }
 
 .bloc_video{
@@ -1984,6 +2006,11 @@ transition: all 0.1s linear;
 
 .bouton_suggestions:hover{
   background-color: rgb(230,230,230);
+}
+
+.search_titre_section span{
+  font-size: 16px;
+  padding-top: 15px;
 }
 
 @media screen and (max-width: 1184px){
