--- a/videos/static/style.css
+++ b/videos/static/style.css
@@ -191,7 +191,7 @@ form .biginput {
   border: 1px solid #c8c8c8;
 
 
-  box-shadow: 0px 0px 6px -5px black inset;
+  box-shadow: 0px 0px 10px -9px black inset;
   color:#858585;
   font-weight:normal;
   font-size: 1em;
@@ -508,6 +508,7 @@ Style des listes de vidéos et de projs
 
 .search_liste_videos a {
   text-decoration: none;
+
 }
 
 
@@ -1364,6 +1365,7 @@ padding-top: 5px;
   margin-top:0px;
   width: 650px;
   margin: 0 auto;
+  margin-bottom: 15px;
 }
 
 
@@ -2057,14 +2059,16 @@ transition: all 0.1s linear;
   vertical-align: top;
 
   width: 395px;
+  height: 140px;
+  overflow: hidden;
 }
 
 .search_bloc_video .legende_vid_titre{
   display:table-cell;
   width: 395px;
   vertical-align: top;
-  font-size: 15px;
-  font-weight: 100;
+  font-size: 18px;
+  font-weight: 400 !important;
 
 }
 
@@ -2088,6 +2092,18 @@ transition: all 0.1s linear;
   font-size: 12px;
   float: right;
   color:#767676;
+}
+
+.search_masquer{
+  padding: 3px;
+  margin-top: 7px;
+  float: right;
+  color:rgb(100,100,100);
+}
+
+.search_masquer:hover{
+  cursor: pointer;
+  color:black;
 }
 
 @media screen and (max-width: 1184px){
