Juste un br ajouté pour la visualisation des vidéos portant un tag particulier

--- a/videos/templates/base.html
+++ b/videos/templates/base.html
@@ -179,8 +179,8 @@
         <div class="container">
           <h1>
           Tags affichés :</h1> <span class="tag">{{titre}}</span>
-          <hr class="container_hr">
-    
+          <hr class="container_hr"><br>
+
 
       {% elif titre and not titre_search %}
           <div class="container">
