--- a/videos/templates/video.html
+++ b/videos/templates/video.html
@@ -36,14 +36,28 @@
     <div class="titre_et_vues_info">
 
       {% if video.category.titre.lower == 'proj jtx' %}
-        <a href="{% url 'category' video.category.id 1 %}" class="titre_et_vues_info_cat_proj">{{video.category.titre}}</a>
+        <!--<a href="{% url 'category' video.category.id 1 %}" class="titre_et_vues_info_cat_proj">{{video.category.titre}}</a>-->
+        {% for r in video.relation_proj_set.all  %}
+          <a class='titre_et_vues_info_cat_proj' href="{% url 'proj' r.proj.id %}">{{ r.proj.titre }}</a>
+        {% endfor %}
       {% elif video.category.titre.lower == 'amphi binets' %}
-        <a href="{% url 'category' video.category.id 1 %}" class="titre_et_vues_info_cat_amphi">{{video.category.titre}}</a>
+        <!--<a href="{% url 'category' video.category.id 1 %}" class="titre_et_vues_info_cat_amphi">{{video.category.titre}}</a>-->
+        {% for r in video.relation_proj_set.all  %}
+          <a class='titre_et_vues_info_cat_amphi' href="{% url 'proj' r.proj.id %}">{{ r.proj.titre }}</a>
+        {% endfor %}
       {% elif video.category.titre.lower == 'semaine internationale' %}
-        <a href="{% url 'category' video.category.id 1 %}" class="titre_et_vues_info_cat_semaine">{{video.category.titre}}</a>
+        <!--<a href="{% url 'category' video.category.id 1 %}" class="titre_et_vues_info_cat_semaine">{{video.category.titre}}</a>-->
+        {% for r in video.relation_proj_set.all  %}
+          <a class='titre_et_vues_info_cat_semaine' href="{% url 'proj' r.proj.id %}">{{ r.proj.titre }}</a>
+        {% endfor %}
       {% elif video.category.titre.lower == "coupe de l'x" %}
-        <a href="{% url 'category' video.category.id 1 %}" class="titre_et_vues_info_cat_coupe">{{video.category.titre}}</a>
+        <!--<a href="{% url 'category' video.category.id 1 %}" class="titre_et_vues_info_cat_coupe">{{video.category.titre}}</a>-->
+        {% for r in video.relation_proj_set.all  %}
+          <a class='titre_et_vues_info_cat_coupe' href="{% url 'proj' r.proj.id %}">{{ r.proj.titre }}</a>
+        {% endfor %}
       {% endif %}
+
+
     </div>
 
     <div class="nb_vues">
@@ -111,6 +125,8 @@
 		<a class="tag" href="{% url 'tag' r.tag.id 1 %}">{{ r.tag.titre }}</a>
 	{% endfor %}
   </div>
+
+
 
 </div>
 
