--- a/videos/templates/video.html
+++ b/videos/templates/video.html
@@ -70,16 +70,16 @@
 
 
 	<div class="titre_et_vues_vues_et_jaime">
-    <div class="titre_et_vues_vues_et_jaime_nb_jaime">
+    <div class="titre_et_vues_vues_et_jaime_nb_jaime" id='video_nb_jaime'>
        {{ nb_jaimes }}
     </div>
 
-		<div class="titre_et_vues_vues_et_jaime_vues_jaime">
+		<div class="titre_et_vues_vues_et_jaime_vues_jaime" id='bouton_jaime'>
 
 			{% if request.user.is_authenticated %}
 
 			{% if favorite %}
-			    <a href="{% url 'remove_favorite' video_id=video.id home=0 %}" class="lien_jaime_rouge">
+			    <a onclick="like(0,'{% url 'remove_favorite' video_id=video.id home=0 %}')" class="lien_jaime_rouge">
 						<div class="titre_et_vues_vues_et_jaime_bouton_jaime_rouge">
 						Je n'aime plus
 						</div>
@@ -87,12 +87,13 @@
 
 
 			{% else %}
+          <!-- href="{% url 'add_favorite' video.id %}"-->
+        <a  onclick="like(1,'{% url 'add_favorite' video.id %}')" class="lien_jaime_vert">
+         <div class="titre_et_vues_vues_et_jaime_bouton_jaime_vert">
+           J'aime
+          </div>
+       </a>
 
-			    <a href="{% url 'add_favorite' video.id %}" class="lien_jaime_vert">
-						<div class="titre_et_vues_vues_et_jaime_bouton_jaime_vert">
-							J'aime
-            </div>
-					</a>
 			{% endif %}
 			{% endif %}
 
@@ -100,8 +101,9 @@
 	</div>
 
   {% if request.user.is_authenticated %}
+  <span id='bouton_epingle'>
   {% if epingle %}
-  <a href="{% url 'remove_epingle' video_id=video.id home=0 %}" class="link_epingler">
+  <a onclick="epingle(0,'{% url 'remove_epingle' video_id=video.id home=0 %}')" class="link_epingler">
     <img src={% static "admin/img/pin.png" %} alt="pin" class="bouton_deja_epingler">
     </a>
     <div class="text_epingler">
@@ -109,13 +111,14 @@
     </div>
 
     {% else %}
-    <a href="{% url 'add_epingle' video.id %}" class="link_epingler">
+    <a onclick="epingle(1,'{% url 'add_epingle' video.id %}')" class="link_epingler">
     <img src={% static "admin/img/pin.png" %} alt="pin" class="bouton_epingler">
     </a>
     <div class="text_epingler">
       épingler
     </div>
     {% endif %}
+    </span>
     {% endif %}
 
 
@@ -302,6 +305,72 @@ var video = document.getElementById('video')
 video.addEventListener('ended',next,false);
 function next(e) {
 	window.location.replace("{% url 'video' suggestions.0.id %}")
+}
+
+function like(val,link){
+    $.get(link, function(data,status){
+      if(data=='lannoo'){
+        if(val==1){
+          document.getElementById('bouton_jaime').innerHTML= `<a onclick="like(0,'{% url 'remove_favorite' video_id=video.id home=0 %}')" class="lien_jaime_rouge">
+ 						<div class="titre_et_vues_vues_et_jaime_bouton_jaime_rouge">
+ 						Je n'aime plus
+ 						</div>
+ 					</a>`;
+          c=parseInt(document.getElementById('video_nb_jaime').innerHTML);
+          document.getElementById('video_nb_jaime').innerHTML=c+1;
+        }
+        if(val==0){
+            document.getElementById('bouton_jaime').innerHTML= `<a  onclick="like(1,'{% url 'add_favorite' video.id %}')" class="lien_jaime_vert">
+           <div class="titre_et_vues_vues_et_jaime_bouton_jaime_vert">
+             J'aime
+            </div>
+         </a>`;
+         c=parseInt(document.getElementById('video_nb_jaime').innerHTML);
+         document.getElementById('video_nb_jaime').innerHTML=c-1;
+        }
+      }
+    });
+}
+
+function epingle(val,link){
+  $.get(link, function(data,status){
+    if(data=='lannoo'){
+      if(val==1){
+        document.getElementById('bouton_epingle').innerHTML= `
+          <a onclick="epingle(0,'{% url 'remove_epingle' video_id=video.id home=0 %}')" class="link_epingler">
+            <img src={% static "admin/img/pin.png" %} alt="pin" class="bouton_deja_epingler">
+          </a>
+          <div class="text_epingler">
+            désépingler
+          </div>
+        `;
+
+        a= `
+        <span id='video_epingle_id_+{{video.id}}'>
+          <a class="lateral_bar_button_a" href="{% url 'video' video.id %}">
+            <div class="lateral_bar_button">
+              <div class="lateral_bar_button_text">
+                  {{ video.titre }}
+              </div>
+            </div>
+        </a>
+        </span>`;
+
+        document.getElementById('video_epingle_liste').innerHTML=a+document.getElementById('video_epingle_liste').innerHTML;
+      }
+      if(val==0){
+          document.getElementById('bouton_epingle').innerHTML= `
+            <a onclick="epingle(1,'{% url 'add_epingle' video.id %}')" class="link_epingler">
+              <img src={% static "admin/img/pin.png" %} alt="pin" class="bouton_epingler">
+            </a>
+            <div class="text_epingler">
+              épingler
+            </div>
+          `;
+          document.getElementById('video_epingle_id_+{{video.id}}').innerHTML="";
+      }
+    }
+  });
 }
 
 </script>
